# yandex_upd_monitor

./: .gitignore  Cargo.toml
bins/monitor/: logger.rs  main.rs
bins/sensor_simulator/: main.rs
examples/: demo.rs  demo_features.rs
src/: lib.rs  logging.rs  metrics.rs  receiver.rs  sender.rs
