[package]
name = "yandex_upd_monitor"
version = "0.1.0"
edition = "2024"

[features]
default = ["random", "logging"]
random = ["dep:rand"]
logging = ["dep:log", "dep:env_logger"]
sqlite = []

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
log = { version = "0.4.28", optional = true }
rand = { version = "0.9.2", optional = true}
serde = { version = "1.0.228", features = ["derive"] }
env_logger = { version = "0.11.5", optional = true }

[[bin]]
name = "sensor_simulator"
path = "bins/sensor_simulator/main.rs"

[[bin]]
name = "monitor"
path = "bins/monitor/main.rs"
